# competition

./: .gitignore  CMakeLists.txt  README.md  build.sh  result.csv  run.sh  sample_geek.csv  sample_geek_result.csv  validate.py
include/: common.hpp
src/: main.cpp
